// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`action menu data input items 1`] = `
<div
  class="data-input menu-item"
  data-testid="addGraphEdge"
>
  <label
    class="unselectable"
  >
    <div
      class="icon-encircle "
    >
      <svg
        class="action-icon"
        color="black"
        data-testid="icon-from"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        style="color: black;"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          link nodes
        </title>
        <path
          d="M200,152a35.77,35.77,0,0,0-16.46,4l-21.39-16.64A35.49,35.49,0,0,0,164,128.65l10.35-3.44A36,36,0,1,0,164,100c0,1.11.06,2.21.16,3.3l-7.78,2.59A36,36,0,0,0,128,92c-1,0-1.88,0-2.81.12l-4.45-10A36,36,0,1,0,96,92c1,0,1.88,0,2.81-.12l4.45,10a35.91,35.91,0,0,0-8.59,39.7L73.39,160.49a36,36,0,1,0,15.94,17.93l21.28-18.91a35.91,35.91,0,0,0,36.8-1.21L167,173.56A36,36,0,1,0,200,152Zm0-64a12,12,0,1,1-12,12A12,12,0,0,1,200,88ZM84,56A12,12,0,1,1,96,68,12,12,0,0,1,84,56ZM56,204a12,12,0,1,1,12-12A12,12,0,0,1,56,204Zm60-76a12,12,0,1,1,12,12A12,12,0,0,1,116,128Zm84,72a12,12,0,1,1,12-12A12,12,0,0,1,200,200Z"
        />
      </svg>
    </div>
    <input
      class="edge-input"
      data-testid="action-addGraphEdge"
      placeholder="comma separated node names"
      type="text"
    />
  </label>
</div>
`;

exports[`action menu data input items 2`] = `
<div
  class="data-input menu-item"
  data-testid="removeGraphEdge"
>
  <label
    class="unselectable"
  >
    <div
      class="icon-encircle "
    >
      <svg
        class="action-icon"
        color="black"
        data-testid="icon-removeGraphEdge"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="color: black;"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          remove edge
        </title>
        <path
          d="M0 0h24v24H0z"
          fill="none"
          stroke="none"
        />
        <path
          d="M9 15l3 -3m2 -2l1 -1"
        />
        <path
          d="M11 6l.463 -.536a5 5 0 0 1 7.071 7.072l-.534 .464"
        />
        <path
          d="M3 3l18 18"
        />
        <path
          d="M13 18l-.397 .534a5.068 5.068 0 0 1 -7.127 0a4.972 4.972 0 0 1 0 -7.071l.524 -.463"
        />
      </svg>
    </div>
    <input
      class="edge-input"
      data-testid="action-removeGraphEdge"
      placeholder="two comma separated node names"
      type="text"
    />
  </label>
</div>
`;

exports[`action menu data input items 3`] = `
<div
  class="data-input menu-item"
  data-testid="deleteGraphNode"
>
  <label
    class="unselectable"
  >
    <div
      class="icon-encircle "
    >
      <svg
        class="action-icon"
        color="black"
        data-testid="icon-deleteGraphNode"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        style="color: black;"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          delete node
        </title>
        <path
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zM124 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H124z"
        />
      </svg>
    </div>
    <input
      class="edge-input"
      data-testid="action-deleteGraphNode"
      placeholder="comma separated node names"
      type="text"
    />
  </label>
</div>
`;
